--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,10 +1,10 @@
 <nav id="nav" class="nav" role="navigation">
   <ul class="list-group-inline push-0">
     <li class="push-r">
-      <a class="{% if page.url == '/' %}current{% endif %}" href="{{site.baseurl/">Speech</a>
+      <a class="{% if page.url == '/' %}current{% endif %}" href="{{site.baseurl}}/">Speech</a>
     </li>
     <li>
-      <a class="{% if page.url contains 'notes' %}current{% endif %}" href="{{site.baseurl/notes">Notes</a>
+      <a class="{% if page.url contains 'notes' %}current{% endif %}" href="{{site.baseurl}}/notes">Notes</a>
     </li>
   </ul>
 </nav>
