--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer bg-dg text-mg pad-t pad-b">
+<footer class="footer bg-dg text-mg pad-t pad-b no-print">
   <div class="max-length gutter">
     <small class="block text-center">© Adam Robillard 2019</small>
   </div>
