--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
       <div class="unit [ xs-1 m-2-3 l-3-4 ] island-1-2">
         <h1 class="push-0">{% if page.url == '/' %}For Thomas{% else %}{{page.title}}{% endif %}</h1>
       </div>
-      <div class="unit [ xs-1 m-1-3 l-1-4 ] island-1-2">
+      <div class="unit [ xs-1 m-1-3 l-1-4 ] island-1-2 no-print">
         {% include nav.html %}
       </div>
     </div>
