Add link to portfolio in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer bg-dg text-mg pad-t pad-b no-print">
   <div class="max-length gutter">
-    <small class="block text-center">© Adam Robillard 2019</small>
+    <small class="block text-center">© <a href="https://adamrobillard.ca">Adam Robillard</a> 2019</small>
   </div>
 </footer>
